--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,9 @@ dependencies:
   path_provider: ^2.1.5
   flutter_bloc: ^9.1.1
   flutter_svg: ^2.2.3
-
+  intl: ^0.20.2
+  gif: ^2.3.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
