--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_svg: ^2.2.3
   intl: ^0.20.2
   gif: ^2.3.0
+  auto_size_text: ^3.0.0
   
 dev_dependencies:
   flutter_test:
