--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   intl: ^0.20.2
   gif: ^2.3.0
   auto_size_text: ^3.0.0
+  fluttertoast: ^9.0.0
   
 dev_dependencies:
   flutter_test:
